Removing tooltip size restriction to prevent text from being cut off in Firefox 2
--HG--
extra : convert_revision : svn%3Ad8bf93c1-8190-44a8-bb31-1ea94378a4df/trunk%40935

--- a/chrome/skin/classic/settings.css
+++ b/chrome/skin/classic/settings.css
@@ -121,3 +121,7 @@ treechildren::-moz-tree-image(col-enabled, subscription-true, subscription-speci
 #FindToolbar, #FindToolbar > .toolbar-holder {
   border: none !important;
 }
+
+tooltip {
+  max-width: none;
+}
